feat(architecture): 收敛运行时并引入 mTLS 任务授权 (#98)
* feat(architecture): 收敛运行时并引入任务级授权

将 Server 与 Worker 合并为 aegisops-app，并保留独立 Agent 与 Runner 权限边界。

App/Agent 改用 mTLS 与 Ed25519 Diagnosis Grant，Runner 增加 Execution Grant 和最小权限数据库账号。

BREAKING CHANGE: 移除独立 aiops-worker、内部 OAuth2/Keycloak 运行依赖及旧部署描述。

* fix(agent): 校验 mTLS 客户端 SPIFFE 身份

* fix(security): 收紧任务授权与审批校验

* fix(deploy): 加固默认拓扑与旧栈升级

* fix(deploy): 修正 Agent 镜像构建上下文

* fix(deploy): 允许非 root 容器读取 Compose 密钥

* fix(deploy): 对齐 Compose 运行阶段

* fix(deploy): 兼容只读 Agent 的 mTLS 探针

* fix(deploy): 生成独立角色信任根

* fix(security): 为内部 Connector 加载 Agent 信任根