@@ -2,6 +2,7 @@ package io.aegisops.security;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -12,6 +13,8 @@ import io.aegisops.common.tenant.TenantContext;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import java.io.IOException;
+import java.security.KeyPair;
+import java.security.KeyPairGenerator;
 import java.time.Clock;
 import java.time.Instant;
 import java.time.ZoneOffset;
@@ -19,137 +22,59 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
-import org.springframework.boot.context.properties.bind.Bindable;
-import org.springframework.boot.context.properties.bind.Binder;
-import org.springframework.boot.context.properties.source.MapConfigurationPropertySource;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.mock.web.MockHttpServletResponse;
-import org.springframework.security.oauth2.jwt.Jwt;
 
 class InternalAgentAuthFilterTest {
-  private static final String GRANT_SECRET = "test-diagnosis-grant-secret-with-32-bytes";
+  private static final String KEY_ID = "task-grant-v1";
   private static final Instant NOW = Instant.parse("2026-07-30T08:00:00Z");
+  private static KeyPair signingKeys;
+
+  @BeforeAll
+  static void generateSigningKeys() throws Exception {
+    signingKeys = KeyPairGenerator.getInstance("Ed25519").generateKeyPair();
+  }
 
   @Test
-  void defaultGrantIssuerAllowlistContainsOnlyDeployedJavaCallers() {
-    assertEquals(
-        List.of("aiops-server", "aiops-worker"),
-        new AiopsSecurityProperties().getDiagnosisGrantIssuers());
+  void defaultGrantIssuerAllowlistContainsOnlyControlPlane() {
+    assertEquals(List.of("aegisops-app"), new AiopsSecurityProperties().getDiagnosisGrantIssuers());
   }
 
   @Test
   void filtersInternalAgentRootPath() {
-    var filter =
-        new InternalAgentAuthFilter(
-            new AiopsSecurityProperties(),
-            new SecurityErrorResponseWriter(new ObjectMapper().findAndRegisterModules()),
-            new FakeAuditService(),
-            request -> new InternalServicePrincipal("svc:aiops-agent", Set.of()),
-            Clock.fixed(NOW, ZoneOffset.UTC));
+    InternalAgentAuthFilter filter = filter(successfulAuthenticator(), signingKeys);
 
     assertFalse(filter.shouldNotFilter(new MockHttpServletRequest("POST", "/internal/agent")));
   }
 
   @Test
-  void rejectsInvalidGrantConfigurationWhenFilterIsConstructedDirectly() {
-    var props = new AiopsSecurityProperties();
-    props.setDiagnosisGrantSecret(" ".repeat(32));
-
-    org.junit.jupiter.api.Assertions.assertThrows(
-        IllegalStateException.class,
-        () ->
-            new InternalAgentAuthFilter(
-                props,
-                new SecurityErrorResponseWriter(new ObjectMapper().findAndRegisterModules()),
-                new FakeAuditService(),
-                request -> new InternalServicePrincipal("svc:aiops-agent", Set.of("memory:read")),
-                Clock.fixed(NOW, ZoneOffset.UTC)));
-  }
-
-  @Test
-  void rejectsMissingTokenForInternalAgentApi() throws Exception {
-    var props = new AiopsSecurityProperties();
-
-    var audit = new FakeAuditService();
-    var filter =
-        new InternalAgentAuthFilter(
-            props,
-            new SecurityErrorResponseWriter(new ObjectMapper().findAndRegisterModules()),
-            audit,
+  void rejectsMissingTlsClientIdentity() throws Exception {
+    FakeAuditService audit = new FakeAuditService();
+    InternalAgentAuthFilter filter =
+        filter(
             request -> {
-              throw new InternalServiceAuthenticationException("Bearer service token is required");
+              throw new InternalServiceAuthenticationException(
+                  "TLS client certificate is required");
             },
-            Clock.fixed(NOW, ZoneOffset.UTC));
-
+            signingKeys,
+            audit);
     MockHttpServletRequest request =
         new MockHttpServletRequest("POST", "/internal/agent/memories/search");
-    request.addHeader(SecurityConstants.HEADER_TENANT_ID, "tenant_1");
     MockHttpServletResponse response = new MockHttpServletResponse();
 
     filter.doFilter(request, response, new NoopChain());
 
     assertEquals(401, response.getStatus());
     assertTrue(response.getContentAsString().contains("INTERNAL_AGENT_AUTH_FAILED"));
-    assertEquals(1, audit.events.size());
-    assertEquals(null, audit.tenantIds.get(0));
+    assertEquals(List.of("internal_auth_failed"), audit.events);
   }
 
   @Test
-  void rejectsValidServiceTokenWithoutEndpointScopeAsForbidden() throws Exception {
-    var props = new AiopsSecurityProperties();
-    var audit = new FakeAuditService();
-    var authenticator =
-        new JwtInternalServiceAuthenticator(
-            props,
-            token ->
-                new Jwt(
-                    token,
-                    NOW,
-                    NOW.plusSeconds(300),
-                    Map.of("alg", "RS256"),
-                    Map.of(
-                        "sub",
-                        "svc:aiops-agent",
-                        "aud",
-                        List.of("aegisops-internal-api"),
-                        "scope",
-                        "cases:read")));
-    var filter =
-        new InternalAgentAuthFilter(
-            props,
-            new SecurityErrorResponseWriter(new ObjectMapper().findAndRegisterModules()),
-            audit,
-            authenticator,
-            Clock.fixed(NOW, ZoneOffset.UTC));
-
-    MockHttpServletRequest request =
-        new MockHttpServletRequest("POST", "/internal/agent/evidence/query");
-    request.addHeader("Authorization", "Bearer service-token");
-    MockHttpServletResponse response = new MockHttpServletResponse();
-
-    filter.doFilter(request, response, new NoopChain());
-
-    assertEquals(403, response.getStatus());
-    assertTrue(response.getContentAsString().contains("INTERNAL_AGENT_AUTH_FORBIDDEN"));
-    assertTrue(!response.getContentAsString().contains("evidence:read"));
-    assertEquals(List.of("internal_auth_forbidden"), audit.events);
-  }
-
-  @Test
-  void rejectsValidServiceTokenWithoutDiagnosisGrant() throws Exception {
-    var props = new AiopsSecurityProperties();
-    props.setDiagnosisGrantSecret(GRANT_SECRET);
-
-    var audit = new FakeAuditService();
-    var filter =
-        new InternalAgentAuthFilter(
-            props,
-            new SecurityErrorResponseWriter(new ObjectMapper().findAndRegisterModules()),
-            audit,
-            request -> new InternalServicePrincipal("svc:aiops-agent", Set.of("memory:read")),
-            Clock.fixed(NOW, ZoneOffset.UTC));
-
+  void rejectsValidMtlsIdentityWithoutDiagnosisGrant() throws Exception {
+    FakeAuditService audit = new FakeAuditService();
+    InternalAgentAuthFilter filter = filter(successfulAuthenticator(), signingKeys, audit);
     MockHttpServletRequest request =
         new MockHttpServletRequest("POST", "/internal/agent/memories/search");
     request.addHeader(SecurityConstants.HEADER_TENANT_ID, "forged_tenant");
@@ -160,89 +85,59 @@ class InternalAgentAuthFilterTest {
 
     assertEquals(401, response.getStatus());
     assertTrue(response.getContentAsString().contains("DIAGNOSIS_GRANT_INVALID"));
-    assertTrue(!chain.called);
+    assertFalse(chain.called);
     assertEquals(List.of("diagnosis_grant_invalid"), audit.events);
-    assertEquals(null, audit.tenantIds.get(0));
+    assertNull(audit.tenantIds.getFirst());
   }
 
   @Test
-  void configurationCannotDisableDiagnosisGrant() throws Exception {
-    var props =
-        new Binder(
-                new MapConfigurationPropertySource(
-                    Map.of(
-                        "aiops.security.diagnosis-grant-secret",
-                        GRANT_SECRET,
-                        "aiops.security.diagnosis-grant-required",
-                        "false")))
-            .bind("aiops.security", Bindable.of(AiopsSecurityProperties.class))
-            .get();
-    var audit = new FakeAuditService();
-    var filter =
-        new InternalAgentAuthFilter(
-            props,
-            new SecurityErrorResponseWriter(new ObjectMapper().findAndRegisterModules()),
-            audit,
-            request -> new InternalServicePrincipal("svc:aiops-agent", Set.of("memory:read")),
-            Clock.fixed(NOW, ZoneOffset.UTC));
+  void rejectsGrantSignedByUnknownKey() throws Exception {
+    KeyPair unknownKeys = KeyPairGenerator.getInstance("Ed25519").generateKeyPair();
+    InternalAgentAuthFilter filter = filter(successfulAuthenticator(), signingKeys);
     MockHttpServletRequest request =
         new MockHttpServletRequest("POST", "/internal/agent/memories/search");
+    request.addHeader(
+        SecurityConstants.HEADER_DIAGNOSIS_GRANT,
+        grant(unknownKeys, "tenant_1", List.of("memory:read")));
+    MockHttpServletResponse response = new MockHttpServletResponse();
+
+    filter.doFilter(request, response, new NoopChain());
+
+    assertEquals(401, response.getStatus());
+    assertTrue(response.getContentAsString().contains("DIAGNOSIS_GRANT_INVALID"));
+  }
+
+  @Test
+  void rejectsGrantWithoutEndpointScopeAsForbidden() throws Exception {
+    FakeAuditService audit = new FakeAuditService();
+    InternalAgentAuthFilter filter = filter(successfulAuthenticator(), signingKeys, audit);
+    MockHttpServletRequest request =
+        new MockHttpServletRequest("POST", "/internal/agent/evidence/query");
+    request.addHeader(
+        SecurityConstants.HEADER_DIAGNOSIS_GRANT,
+        grant(signingKeys, "tenant_1", List.of("cases:read")));
     MockHttpServletResponse response = new MockHttpServletResponse();
     RecordingChain chain = new RecordingChain();
 
     filter.doFilter(request, response, chain);
 
-    assertEquals(401, response.getStatus());
-    assertTrue(!chain.called);
-    assertEquals(List.of("diagnosis_grant_invalid"), audit.events);
-  }
-
-  @Test
-  void reportsIdentityProviderFailureAsServiceUnavailable() throws Exception {
-    var props = new AiopsSecurityProperties();
-    var audit = new FakeAuditService();
-    var filter =
-        new InternalAgentAuthFilter(
-            props,
-            new SecurityErrorResponseWriter(new ObjectMapper().findAndRegisterModules()),
-            audit,
-            request -> {
-              throw new InternalServiceAuthenticationUnavailableException(
-                  "Service authentication is temporarily unavailable");
-            },
-            Clock.fixed(NOW, ZoneOffset.UTC));
-
-    MockHttpServletRequest request =
-        new MockHttpServletRequest("POST", "/internal/agent/evidence/query");
-    request.addHeader("Authorization", "Bearer service-token");
-    MockHttpServletResponse response = new MockHttpServletResponse();
-
-    filter.doFilter(request, response, new NoopChain());
-
-    assertEquals(503, response.getStatus());
-    assertTrue(response.getContentAsString().contains("INTERNAL_AGENT_AUTH_UNAVAILABLE"));
-    assertEquals(List.of("internal_auth_unavailable"), audit.events);
-    assertEquals(1, audit.tenantIds.size());
-    assertEquals(null, audit.tenantIds.get(0));
+    assertEquals(403, response.getStatus());
+    assertTrue(response.getContentAsString().contains("INTERNAL_AGENT_AUTH_FORBIDDEN"));
+    assertFalse(response.getContentAsString().contains("evidence:read"));
+    assertFalse(chain.called);
+    assertEquals(List.of("internal_auth_forbidden"), audit.events);
+    assertEquals(List.of("tenant_1"), audit.tenantIds);
   }
 
   @Test
   void derivesTenantFromDiagnosisGrantInsteadOfUntrustedHeader() throws Exception {
-    var props = new AiopsSecurityProperties();
-    props.setDiagnosisGrantSecret(GRANT_SECRET);
-
-    var filter =
-        new InternalAgentAuthFilter(
-            props,
-            new SecurityErrorResponseWriter(new ObjectMapper().findAndRegisterModules()),
-            new FakeAuditService(),
-            request -> new InternalServicePrincipal("svc:aiops-agent", Set.of("memory:read")),
-            Clock.fixed(NOW, ZoneOffset.UTC));
-
+    InternalAgentAuthFilter filter = filter(successfulAuthenticator(), signingKeys);
     MockHttpServletRequest request =
         new MockHttpServletRequest("POST", "/internal/agent/memories/search");
     request.addHeader(SecurityConstants.HEADER_TENANT_ID, "forged_tenant");
-    request.addHeader(SecurityConstants.HEADER_DIAGNOSIS_GRANT, grant("tenant_1"));
+    request.addHeader(
+        SecurityConstants.HEADER_DIAGNOSIS_GRANT,
+        grant(signingKeys, "tenant_1", List.of("memory:read")));
     MockHttpServletResponse response = new MockHttpServletResponse();
     RecordingChain chain = new RecordingChain();
 
@@ -251,27 +146,19 @@ class InternalAgentAuthFilterTest {
     assertEquals(200, response.getStatus());
     assertTrue(chain.called);
     assertEquals("tenant_1", chain.tenantId);
-    assertEquals(null, TenantContext.getTenantId());
+    assertNull(TenantContext.getTenantId());
   }
 
   @Test
   void auditsForbiddenGrantContextAgainstVerifiedTenant() throws Exception {
-    var props = new AiopsSecurityProperties();
-    props.setDiagnosisGrantSecret(GRANT_SECRET);
-
-    var audit = new FakeAuditService();
-    var filter =
-        new InternalAgentAuthFilter(
-            props,
-            new SecurityErrorResponseWriter(new ObjectMapper().findAndRegisterModules()),
-            audit,
-            request -> new InternalServicePrincipal("svc:aiops-agent", Set.of("evidence:read")),
-            Clock.fixed(NOW, ZoneOffset.UTC));
-
+    FakeAuditService audit = new FakeAuditService();
+    InternalAgentAuthFilter filter = filter(successfulAuthenticator(), signingKeys, audit);
     MockHttpServletRequest request =
         new MockHttpServletRequest("POST", "/internal/agent/evidence/query");
     request.addHeader(SecurityConstants.HEADER_TENANT_ID, "forged_tenant");
-    request.addHeader(SecurityConstants.HEADER_DIAGNOSIS_GRANT, grant("tenant_1"));
+    request.addHeader(
+        SecurityConstants.HEADER_DIAGNOSIS_GRANT,
+        grant(signingKeys, "tenant_1", List.of("evidence:read")));
     MockHttpServletResponse response = new MockHttpServletResponse();
 
     filter.doFilter(request, response, new GrantContextMismatchChain());
@@ -281,19 +168,48 @@ class InternalAgentAuthFilterTest {
     assertEquals(List.of("tenant_1"), audit.tenantIds);
   }
 
-  private String grant(String tenantId) {
+  private InternalAgentAuthFilter filter(
+      InternalServiceAuthenticator authenticator, KeyPair verificationKeyPair) {
+    return filter(authenticator, verificationKeyPair, new FakeAuditService());
+  }
+
+  private InternalAgentAuthFilter filter(
+      InternalServiceAuthenticator authenticator,
+      KeyPair verificationKeyPair,
+      FakeAuditService audit) {
+    AiopsSecurityProperties properties = new AiopsSecurityProperties();
+    return new InternalAgentAuthFilter(
+        properties,
+        new SecurityErrorResponseWriter(new ObjectMapper().findAndRegisterModules()),
+        audit,
+        authenticator,
+        new DiagnosisGrantVerificationKeys(Map.of(KEY_ID, verificationKeyPair.getPublic())),
+        Clock.fixed(NOW, ZoneOffset.UTC));
+  }
+
+  private InternalServiceAuthenticator successfulAuthenticator() {
+    return request ->
+        new InternalServicePrincipal("spiffe://aegisops.local/service/aiops-agent", Set.of());
+  }
+
+  private String grant(KeyPair keys, String tenantId, List<String> scopes) {
     Clock clock = Clock.fixed(NOW, ZoneOffset.UTC);
     return new DiagnosisGrantCodec(new ObjectMapper(), clock)
         .issue(
-            GRANT_SECRET,
+            keys.getPrivate(),
+            KEY_ID,
             new DiagnosisGrantClaims(
-                "aiops-server",
-                "aegisops-internal-api",
+                "aegisops-app",
+                "diagnosis:diag_1",
+                Set.of("aegisops-internal-api", "aiops-agent-api"),
+                scopes,
                 tenantId,
                 "inc_1",
+                "diag_1",
                 "trace_1",
                 NOW,
-                NOW.plusSeconds(300)));
+                NOW.plusSeconds(300),
+                "grant_1"));
   }
 
   private static class NoopChain implements FilterChain {
@@ -336,12 +252,7 @@ class InternalAgentAuthFilterTest {
     final List<String> tenantIds = new ArrayList<>();
 
     FakeAuditService() {
-      super(
-          new TenantSecurityEventRepository() {
-            @Override
-            public void create(TenantSecurityEventCreateCommand command) {}
-          },
-          new ObjectMapper());
+      super(command -> {}, new ObjectMapper());
     }
 
     @Override
